# Trabalho_Devops

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: python-package.yml
arq/: Media.py
test/: test_Media.py
